open-policy-agent/storage/disallow-emptydir/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowemptydir
  annotations:
    description: Disallows emptyDir volumes in pods.
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowEmptyDir
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowemptydir
        violation[{"msg": msg}] {
          missing(input.review.object.spec.volumes[_], "emptyDir")
          msg := sprintf("Invalid volume association in Pod - %v. emptyDir volumes are not allowed.", [input.review.object.metadata.name])
        }

        missing(obj, field) = true {
          obj[field]
        }
